<resources>
    <string name="app_name">AppMarvelDesafio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome">Welcome to the Marvel HQs</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="email">tairo@digitalhouse.com</string>
    <string name="password">***************</string>
    <string name="remember">Remember</string>
    <string name="hint_name">Name</string>
    <string name="name">DigitalHouseBrasil</string>
    <string name="desc">The frighteningly funky and fearsome Freak returns, more powerful than ever! And this action-packed issue features the <br />gorgeous art of Barry Kitson - fresh from Marvels THE ORDER!  Plus: Menace! Curt Connors!  Aunt May!  Lots of innocent bystanders!  Gale wrote it, Wacker edited it, and Marvel actually thought it was a good idea to publish it!<br />Rated A ...$2.99 <br /></string>
</resources>